# vcpkg-sdl2-example

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yaml
src/: main.cpp
